Improve mobile view; fix spacing; add stations

--- a/main.css
+++ b/main.css
@@ -113,9 +113,8 @@ progress {
 
 #about {
 	font-size: 1.25rem;
-	text-align: justify;
-	padding-left: 2rem;
-	padding-right: 2rem;
+	padding-left: 11%;
+	padding-right: 6%;
 }
 
 .important {
@@ -153,6 +152,7 @@ select {
 	border-left: 15px solid transparent;
 	border-right: 15px solid transparent;
 	border-top: 20px solid  #4B698B;
+	background: #fff;
 }
 
 footer, footer a {
@@ -190,13 +190,14 @@ footer {
 	}
 
 @media (max-width: 700px) {
+
 	html {
 		background-size: initial;
 		background-position: 20% 40%;
 	}
 	#about {
-		padding-right: 1rem;
-		padding-left: 1rem;
+		padding-right: 2.5%;
+		padding-left: 5%;
 	}
 	progress {
 		width: 75%;
@@ -211,5 +212,19 @@ footer {
 	}
 	.ui-control {
 		font-size: 1rem;
+	}
+
+	#selectWrapper:after {
+		pointer-events: none;
+		content: '';
+		position: absolute;
+		top: 20px;
+		right: 5px;
+		display: inline-block;
+		width: 0;
+		height: 0;
+		border-left: 7px solid transparent;
+		border-right: 7px solid transparent;
+		border-top: 10px solid #4B698B;
 	}
 }
